--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li class="active"><a data-scroll href="#about">Chi Siamo</a></li>
                     <li><a data-scroll href="#speakers">Speakers</a></li>              
                     <li><a data-scroll href="#schedule">Programma</a></li>                  
-                    <li><a data-scroll href="#partner">Partners</a></li>                  
+                    <li><a data-scroll href="#partner">Le Associazioni</a></li>                  
                     <!-- <li><a data-scroll href="#">Sponsorship</a></li> -->
                     <li><a data-scroll href="#faq">FAQ</a></li>
                     <li><a data-scroll href="#photos">Foto</a></li>
@@ -271,20 +271,6 @@
     </section>
 
 
-    <section id="contribution" class="section bg-image-2 contribution">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12">
-                    <h3 class="text-uppercase mt0 font-400">Aiutaci a Crescere</h3>
-                    <br><br>
-                    <!--
-                    <p>You've inspired new consumer, racked up click-thru's, blown-up brand awareness. We can't give you back the weekends you worked, or erase the pain of being forced to make the logo bigger. But if you submit your best work.</p>
-                    -->
-                    <a class="btn btn-white" href="#">Dona</a>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <section id="schedule" class="section schedule">
         <div class="container">
@@ -328,45 +314,89 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="section-title">I nostri Partners</h3>
+                    <h3 class="section-title">Le Associazioni</h3>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-1"></a>
-                </div>
-                <div class="col-sm-3">
+                </div><div class="col-sm-2">
                     <a class="partner-box partner-box-2"></a>
-                </div>
-                <div class="col-sm-3">
+                </div><div class="col-sm-2">
                     <a class="partner-box partner-box-3"></a>
-                </div>
-                <div class="col-sm-3">
+                </div><div class="col-sm-2">
                     <a class="partner-box partner-box-4"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-5"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-6"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-7"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-8"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-9"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-10"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-11"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-12"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-13"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-14"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-15"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-16"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-17"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-18"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-19"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-20"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-21"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-22"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-23"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-24"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-25"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-26"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-27"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-28"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-29"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-30"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-31"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-32"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-33"></a>
+                </div><div class="col-sm-2">
+                    <a class="partner-box partner-box-34"></a>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="col-sm-3">
-                    <a class="partner-box partner-box-5"></a>
-                </div>
-                <div class="col-sm-3">
-                    <a class="partner-box partner-box-6"></a>
-                </div>
-                <div class="col-sm-3">
-                    <a class="partner-box partner-box-7"></a>
-                </div>
-                <div class="col-sm-3">
-                    <a class="partner-box partner-box-8"></a>
-                </div>
-            </div>   
+            
     </section>
 
     <section id="faq" class="section faq">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="section-title">Event FAQs</h3>
+                    <h3 class="section-title">FAQ</h3>
                 </div>
             </div>
             <div class="row">
@@ -376,14 +406,13 @@
                         <div class="panel panel-default">
                             <div class="panel-heading" role="tab" id="headingOne">
                                 <h4 class="panel-title">
-                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> What is the price of the ticket ?</a>
+                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> Quanto cosa l'ingresso ?</a>
                                 </h4>
                             </div>
 
                             <div id="collapseOne" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body">
-                                    <h3>Hello</h3>
-                                    <p>Lorem Ipsum</p>
+                                    <p>L'ingresso è completamente gratuito ed aperto a tutti coloro che vogliono partecipare. </p>
                                 </div>
                             </div>
                         </div>
@@ -391,15 +420,17 @@
                         <div class="panel panel-default">
                             <div class="panel-heading" role="tab" id="headingTwo">
                                 <h4 class="panel-title">
-                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"> What is included in my ticket ?</a>
+                                    <a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo"> C'è la possibilità di mangiare ?</a>
                                 </h4>
                             </div>
 
                             <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-                                <div class="panel-body">Hello</div>
+                                <div class="panel-body">
+                                    <p>Si, all'interno dell'evento ci saranno delle zone adibite alla consumazione di pasti.</p>
+                                </div>
                             </div>
                         </div>
-  
+                        <!--
                         <div class="panel panel-default">
                             <div class="panel-heading" role="tab" id="headingThree">
                                 <h4 class="panel-title">
@@ -435,6 +466,7 @@
                                 <div class="panel-body">Hello</div>
                             </div>
                         </div>
+                        -->
                     </div>
                 </div>
             </div>
