--- a/index.html
+++ b/index.html
@@ -320,72 +320,135 @@
             <div class="row">
                 <div class="col-sm-2">
                     <a class="partner-box partner-box-1"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-2"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-3"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-4"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-5"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-6"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-7"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-8"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-9"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-10"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-11"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-12"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-13"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-14"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-15"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-16"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-17"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-18"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-19"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-20"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-21"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-22"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-23"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-24"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-25"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-26"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-27"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-28"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-29"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-30"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-31"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-32"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-33"></a>
-                </div><div class="col-sm-2">
+                </div>
+                <div class="col-sm-2">
                     <a class="partner-box partner-box-34"></a>
+                </div>
+                <div class="col-sm-2">
+                    <a class="partner-box partner-box-35"></a>
+                </div>
+                <div class="col-sm-2">
+                    <a class="partner-box partner-box-36"></a>
+                </div>
+                <div class="col-sm-2">
+                    <a class="partner-box partner-box-37"></a>
+                </div>
+                <div class="col-sm-2">
+                    <a class="partner-box partner-box-38"></a>
+                </div>
+                <div class="col-sm-2">
+                    <a class="partner-box partner-box-39"></a>
+                </div>
+                <div class="col-sm-2">
+                    <a class="partner-box partner-box-40"></a>
+                </div>
+                <div class="col-sm-2">
+                    <a class="partner-box partner-box-41"></a>
+                </div>
+                <div class="col-sm-2">
+                    <a class="partner-box partner-box-42"></a>
+                </div>
+                <div class="col-sm-2">
+                    <a class="partner-box partner-box-43"></a>
+                </div>
+                <div class="col-sm-2">
+                    <a class="partner-box partner-box-44"></a>
                 </div>
             </div>
 
