--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 						</ol>
 
 						<!-- Wrapper for slides -->
-						<div class="carousel-inner" style=" width:100%; height: 1020px !important;">
+						<div class="carousel-inner" style="width:100%;">
 							<div class="item active">
 								<div class="row">
 									<div class="col-md-12">
