--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Social Days</title>
-
+	<link rel="shortcut icon" href="/assets/images/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
 	<!-- css -->
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css">
@@ -145,7 +146,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-12">
-					<div id="myCarousel" class="carousel slide" data-ride="carousel">
+					<div id="myCarousel" class="carousel slide" data-interval="false" data-ride="carousel">
 						<!-- Indicators -->
 						<ol class="carousel-indicators">
 							<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -797,7 +798,7 @@
 					</div>
 				</div>
 			</div>
-			<a class="btn showdetails" data-toggle="collapse" data-scroll data-target="#viewdetails" href="#partner"></a>
+			<a class="btn showdetails" data-toggle="collapse"  data-target="#viewdetails" href="#partner"></a>
 
 		</div>    
 	</section>
