Add Facebook Meta Tags

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="bower_components/ionicons/css/ionicons.min.css">
 	<link rel="stylesheet" href="assets/css/main.css">
+	<meta property="og:title" content="Social Days"/>
+	<meta property="og:description" content="Sito ufficiale dei Social Days (13-16 Luglio 2017 / Curvone di Ostia)"/>
+	<meta property="og:url" content="http://www.socialdays.org"/>
+	<meta property="og:image" content="http://www.socialdays.org/assets/images/logo.jpg"/>
 </head>
 <body data-spy="scroll" data-target="#site-nav">
 	<nav id="site-nav" class="navbar navbar-fixed-top navbar-custom">
