Add Facebook Meta Tags

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta property="og:title" content="Social Days"/>
 	<meta property="og:description" content="Sito ufficiale dei Social Days (13-16 Luglio 2017 / Curvone di Ostia)"/>
 	<meta property="og:url" content="http://www.socialdays.org"/>
-	<meta property="og:image" content="http://www.socialdays.org/assets/images/logo.jpg"/>
+	<meta property="og:image" content="http://www.socialdays.org/assets/images/logo_social.jpg"/>
 </head>
 <body data-spy="scroll" data-target="#site-nav">
 	<nav id="site-nav" class="navbar navbar-fixed-top navbar-custom">
