--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@ categories
 						<div class="panel panel-default">
 							<div class="panel-heading" role="tab" id="headingOne">
 								<h4 class="panel-title">
-									<a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> Quanto cosa l'ingresso ?</a>
+									<a class="faq-toggle collapsed" role="button" data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne"> Quanto costa l'ingresso ?</a>
 								</h4>
 							</div>
 
